# Jobs-API

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: database.py  main.py  models.py
app/api/v1/: jobs.py
migrations/: env.py
migrations/versions/: 0001_create_jobs_table.py  0002_add_job_version_column.py
scripts/: seed_db.py
tests/: test_jobs_api.py
